# agent_ledger

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/agentledger-native/assets/: dashboard.html
crates/agentledger-native/src/: dashboard.rs  db.rs  lib.rs  proxy.rs
docs/: MANUAL_TEST.md
python/agentledger/: __init__.py  cli.py
tests/: test_python_api.py
