[package]
name = "agentledger-native"
version = "0.1.0"
edition = "2021"
description = "Native Rust core for the AgentLedger Python package"
license = "Apache-2.0"
repository = "https://github.com/Metimer/agent_ledger"

[lib]
name = "_native"
path = "crates/agentledger-native/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = "0.8"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
time = { version = "0.3", features = ["formatting", "serde"] }
toml = "0.9"
uuid = { version = "1.18", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
